Adjust styles. Correct alignment.
Tighten spacing slightly on crossword hints. Widen container so text won
't wrap as much.

Left align down and across

--- a/part2/pages/src/styles/organisms/instance-grid.scss
+++ b/part2/pages/src/styles/organisms/instance-grid.scss
@@ -1,45 +1,25 @@
 @import '../utils/variables';
 
-.slider {
-  .controls {
-    .slider-control {
-      width:60%;
-      height: 5vw;
-      float: left;
-      margin-top: -1.5vw;
-    }
-    .scale {
-      float: right;
-      width: 15%;
-      margin-top:-0.5vw;
+.instance-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-end;
+  align-content: flex-end;
+  height: 24rem;
+  margin-bottom: 1rem;
+}
 
-    }
-  }
+.instance-buttons {
+  .slider-container {
+    width: 75%;
 
-  .scale-grid {
-    position: relative;
-    height: 25.4vw;
-    display: table-cell;
-    vertical-align: bottom;
-    width: 30vw;
-
-    .instance {
-      display: inline-block;
-      background-color: $k8color;
-      margin: $onesspace;
-      width: 32%;
-      color: #fff;
-      text-align: center;
-      font-size: 1rem;
-      height: 1.3rem;
+    .slider {
+      width: 90%;
     }
   }
-  .scale-hints {
-    clear: both;
-    font-size: 0.8rem;
 
-    P {
-      line-height: 1rem;
-    }
+  button {
+    width: 25%;
   }
 }
